<resources>
    <string name="app_name">MyNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyNews</string>
    <string name="nav_header_subtitle">hello@mynews.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_notifications">Notifications</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>

    <string name="tabs_title_1">Titre1</string>
    <string name="tabs_title_2">Titre2</string>
    <string name="tabs_title_3">Titre3</string>

    <!-- Entries of navigation drawer -->
    <string name="drawer_title">Thèmes</string>

    <string name="drawer_health">Santé</string>
    <string name="drawer_technology">Technologie</string>
    <string name="drawer_food">Alimentation</string>
    <string name="drawer_science">Science</string>
    <string name="perso_firsttime">A personnaliser</string>

    <string name="drawer_title1">A découvrir</string>
    <string name="drawer_title2">Personnalisation</string>

    <string name="drawer_search">Chercher et trouver!</string>
    <string name="drawer_notification">Notifications</string>
    <string name="drawer_personalization">"Mes centres d'intérêt"</string>

    <string name="drawer_results_title">A découvrir</string>

    <!-- Array with entries of welcome page -->
    <array name="TabTitles">
        <item>"Top Stories"</item>
        <item>"Most Popular"</item>
        <item>"Monde"</item>
    </array>

    <!-- informations for menu -->
    <string name="helpmenu_title">"A l'aide!"</string>
    <string name="helpmenu_text">"Tous les cris, les SOS."</string>
    <string name="aboutmenu_title">"Qui, que, quoi?"</string>
    <string name="aboutmenu_text">"MyNews, l'application qui te tient au courant sur tout, tout, tout."</string>
    <string name="toolbar_title">"Rechercher"</string>

    <!-- informations for API -->
    <string name="sort_by_newest">newest</string>

    <!-- informations for search dialog -->
    <string name="searchdialog_title">"Dommage!"</string>
    <string name="searchdialog_text">"Aucun article ne correspond à votre recherche"</string>
    <string name="search_results_title">"Résultats de la recherche"</string>

    <!-- informations for notification dialog -->
    <string name="notificationdialog_checkbox_error">"Il faut saisir au moins un mot clé"</string>
    <string name="notification_newarticles21">"Vous avez un nouvel article à découvrir aujourd'hui!"</string>
    <string name="notification_noarticles">"Vous n'avez aucun article à découvrir aujourd'hui!"</string>
    <string name="notification_newarticles1">"Vous avez "</string>
    <string name="notification_newarticles2">" nouveaux articles à découvrir aujourd'hui!"</string>

    <!-- keys for search-notification window -->
    <string name="notification_window_switch">"Je veux recevoir des notifications! (une fois par jour)"</string>
    <string name="date_error">"Il faut saisir une date de début et une date de fin."</string>
    <string name="search_window_button">"C'est parti!"</string>
    <string name="travel_checkbox_text">"Voyages"</string>
    <string name="business_checkbox_text">"Business"</string>
    <string name="arts_checkbox_text">"Arts"</string>
    <string name="entrepreneurs_checkbox_text">"Entrepreneurs"</string>
    <string name="politics_checkbox_text">"Politique"</string>
    <string name="sport_checkbox_text">"Sport"</string>
    <string name="automobiles_checkbox_text">"Voitures"</string>
    <string name="fashion_checkbox_text">"Mode"</string>
    <string name="food_checkbox_text">"Alimentation"</string>
    <string name="sciences_checkbox_text">"Sciences"</string>
    <string name="technology_checkbox_text">"Technologie"</string>
    <string name="world_checkbox_text">"Monde"</string>
    <string name="health_checkbox_text">"Santé"</string>
    <string name="search_query_term">"Vos mots clés"</string>
    <string name="begin_date">"Date de début"</string>
    <string name="end_date">"Date de fin</string>
    <string name="search_window_title">"Recherche"</string>
    <string name="notif_window_title">"Notifications"</string>

    <!-- informations for personalization window -->
    <string name="personalization_window_title">"Personnalisation"</string>
    <string name="personalization_text1">"Quels thèmes souhaitez-vous pouvoir suivre depuis le menu?" (4 thèmes max)</string>
    <string name="personalization_error0">"Il faut choisir au moins un thème"</string>
    <string name="personalization_error4">"Il faut choisir 4 thèmes au maximum"</string>

    <string name="title_activity_web_view">"Lire l'article"</string>
    <string name="title_activity_results_search">"Mes trouvailles"</string>
    <string name="title_activity_navigation_drawer">"Mes préférences</string>
    <string name="title_activity_noresult">"Pas de résultat"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
