<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/baseline_search_white"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/toolbar_title">
    </item>

</menu>