...
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    app:titleTextColor="@android:color/white"
    app:title="Title"/>

<EditText
    android:id="@+id/search_query_edittext"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/search_toolbar"
    android:hint="@string/search_query_term"
    android:padding="20dp"/>

...
